# splitAxes

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/splitAxes/: __init__.py  multiAxes.py
src/splitAxes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/splitAxes/gridder/: gridder.py
tests/: simpleDisplayTest.py
