[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="splitAxes"
authors = [
	{name = "Thomas M. Boudreaux", email="thomas@boudreauxmail.com"},
	]
description="A split module for easily generating matplotlib figures with split x axes"
readme="README.md"
requires-python = ">=3.8"
keywords=["graphing"]
license = {text = "MIT"}
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3"
	]
dependencies = [
	"matplotlib",
	"numpy"
	]
dynamic=["version"]
